chore: fix readability